# scheduler

./: .env  .gitignore  list_tasks.prof  profile_list_tasks.py  requirements.txt
cli/: Cargo.toml  cli.py
cli/src/: commands.rs  date_parser.rs  main.rs
src/: main.py
src/components/: calendar_sync.py  crud.py  database.py  models.py  scheduler.py  schemas.py
tests/: test_api.py  test_scheduler.py
