[package]
name = "todo"
version = "0.1.0"
edition = "2021"
authors = ["aryan thakur"]
description = "CLI for scheduler"
license = "MIT"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }
clap_complete = "4.5.50"
chrono = "0.4"
regex = "1"